--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,23 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <version>2.10.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.13</version>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>com.typesafe</groupId>-->
+            <!--<artifactId>config</artifactId>-->
+            <!--<version>1.0.1</version>-->
+        <!--</dependency>-->
+
         <!--<dependency>-->
             <!--<groupId>org.fusesource.scalate</groupId>-->
             <!--<artifactId>scalate-core_2.10</artifactId>-->
