--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,11 @@
     <groupId>com.innoxyz</groupId>
     <artifactId>innodoc</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <slf4j.version>1.7.2</slf4j.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <scala.version>2.10.0</scala.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.apache.velocity</groupId>
@@ -15,15 +19,9 @@
             <version>1.7</version>
         </dependency>
         <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>2.10.0</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
-            <version>1.6.0</version>
+            <version>1.7.0</version>
             <scope>system</scope>
             <systemPath>${java.home}/../lib/tools.jar</systemPath>
         </dependency>
@@ -33,16 +31,22 @@
             <version>1.7.5</version>
         </dependency>
         <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-compiler</artifactId>
-            <version>2.10.0</version>
-        </dependency>
-        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.0.13</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <version>${scala.version}</version>
+            <scope>compile</scope>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>com.typesafe</groupId>-->
             <!--<artifactId>config</artifactId>-->
@@ -58,9 +62,9 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.scala-tools</groupId>
-                <artifactId>maven-scala-plugin</artifactId>
-                <version>2.15.2</version>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>3.1.5</version>
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -83,6 +87,19 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <args>
+                        <!--<arg>-P:continuations:enable</arg>-->
+                        <arg>-feature</arg>
+                    </args>
+                    <compilerPlugins>
+                        <compilerPlugin>
+                            <groupId>org.scala-lang.plugins</groupId>
+                            <artifactId>continuations</artifactId>
+                            <version>${scala.version}</version>
+                        </compilerPlugin>
+                    </compilerPlugins>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
